Fix Arabic text in index.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </head>
 <body>
   <header>
-    <h1>?? صفحة كتابة القصة</h1>
+    <h1>صفحة كتابة القصة</h1>
     <p>اكتب قصتك بأسلوبك وابدأ الإبداع الآن</p>
   </header>
 
@@ -126,7 +126,7 @@
 
     <div class="controls">
       <span class="word-count" id="wordCount">عدد الكلمات: 0</span>
-      <button id="saveBtn">?? حفظ القصة</button>
+      <button id="saveBtn">حفظ القصة</button>
     </div>
   </div>
 
